--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+
+html {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(49, 49, 49);
+  font-family: 'Nunito', sans-serif;
+}
+
 .App {
+  display: block;
+  width: 500px;
+  margin:auto;
+  margin-top: 30px;
+  background-color: white;
   text-align: center;
-}
+  border: 3px solid #0ccece;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.title {
+  background: repeating-linear-gradient(
+    45deg,
+    #88d6d6,
+    #88d6d6 10px,
+    #e6e6e6 10px,
+    #e6e6e6 20px
+  );
+  font-size: 34px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.signs{
+  padding-left: 20px;
+  text-align: left;
 }
-
-.App-link {
-  color: #61dafb;
+.results p span{
+  font-size: 34px;
+  display: inline-block;
+  padding: 10px;
+  border: 3px solid #0CCECE;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  font-size: 18px;
+  display: inline-block;
+  padding: 10px;
+  border: 3px solid #0CCECE;
 }
