--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,9 @@ html {
 
 .App {
   display: block;
-  width: 500px;
+  max-width: 500px;
   margin:auto;
-  margin-top: 30px;
+  margin-top: 15px;
   background-color: white;
   text-align: center;
   border: 3px solid #0ccece;
@@ -28,7 +28,7 @@ html {
   font-size: 34px;
 }
 .signs{
-  padding-left: 20px;
+  padding-left: 10px;
   text-align: left;
 }
 .results p span{
